set insertion and deletion operations

--- a/index.html
+++ b/index.html
@@ -16,46 +16,46 @@
         <button class="help-btn" type="submit">?</button>
     </header>
 
+    <div class="msg"></div>
 
     <!-- ===== INPUT - AREA ===== -->
     
     <div class="input-area">
-            <input class="input-char input-1 first" type="text" maxlength="1" oninput="movetoNext('.input-1.second')">
-            <input class="input-char input-1 second" type="text" maxlength="1" oninput="movetoNext('.input-1.third')">
-            <input class="input-char input-1 third" type="text" maxlength="1" oninput="movetoNext('.input-1.fourth')">
-            <input class="input-char input-1 fourth" type="text" maxlength="1" oninput="movetoNext('.input-1.fifth')">
-            <input class="input-char input-1 fifth" type="text" maxlength="1" oninput="movetoNext('.input-2.first'); processInput()">
+            <input class="input-char active" type="text" maxlength="1">
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
         <br>
-            <input class="input-char input-2 first" type="text" maxlength="1" oninput="movetoNext('.input-2.second')">
-            <input class="input-char input-2 second" type="text" maxlength="1" oninput="movetoNext('.input-2.third')">
-            <input class="input-char input-2 third" type="text" maxlength="1" oninput="movetoNext('.input-2.fourth')">
-            <input class="input-char input-2 fourth" type="text" maxlength="1" oninput="movetoNext('.input-2.fifth')">
-            <input class="input-char input-2 fifth" type="text" maxlength="1" oninput="movetoNext('.input-3.first'); processInput()">
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
         <br>
-            <input class="input-char input-3 first" type="text" maxlength="1" oninput="movetoNext('.input-3.second')">
-            <input class="input-char input-3 second" type="text" maxlength="1" oninput="movetoNext('.input-3.third')">
-            <input class="input-char input-3 third" type="text" maxlength="1" oninput="movetoNext('.input-3.fourth')">
-            <input class="input-char input-3 fourth" type="text" maxlength="1" oninput="movetoNext('.input-3.fifth')">
-            <input class="input-char input-3 fifth" type="text" maxlength="1" oninput="movetoNext('.input-4.first'); processInput()">
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
         <br>
-            <input class="input-char input-4 first" type="text" maxlength="1" oninput="movetoNext('.input-4.second')">
-            <input class="input-char input-4 second" type="text" maxlength="1" oninput="movetoNext('.input-4.third')">
-            <input class="input-char input-4 third" type="text" maxlength="1" oninput="movetoNext('.input-4.fourth')">
-            <input class="input-char input-4 fourth" type="text" maxlength="1" oninput="movetoNext('.input-4.fifth')">
-            <input class="input-char input-4 fifth" type="text" maxlength="1" oninput="movetoNext('.input-5.first'); processInput()">
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
         <br>
-            <input class="input-char input-5 first" type="text" maxlength="1" oninput="movetoNext('.input-5.second')">
-            <input class="input-char input-5 second" type="text" maxlength="1" oninput="movetoNext('.input-5.third')">
-            <input class="input-char input-5 third" type="text" maxlength="1" oninput="movetoNext('.input-5.fourth')">
-            <input class="input-char input-5 fourth" type="text" maxlength="1" oninput="movetoNext('.input-5.fifth')">
-            <input class="input-char input-5 fifth" type="text" maxlength="1" oninput="movetoNext('.input-6.first'); processInput()">
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
         <br>
-            <input class="input-char input-6 first" type="text" maxlength="1" oninput="movetoNext('.input-6.second')">
-            <input class="input-char input-6 second" type="text" maxlength="1" oninput="movetoNext('.input-6.third')">
-            <input class="input-char input-6 third" type="text" maxlength="1" oninput="movetoNext('.input-6.fourth')">
-            <input class="input-char input-6 fourth" type="text" maxlength="1" oninput="movetoNext('.input-6.fifth')">
-            <input class="input-char input-6 fifth" type="text" maxlength="1" oninput="result()">
-        
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
+            <input class="input-char" type="text" maxlength="1" disabled>
     </div>
 
 
@@ -86,7 +86,7 @@
             <button class="keyboard-button" value="l">l</button>
         </div>
         <div class="third-row">
-            <button class="keyboard-button">Del</button>
+            <button class="keyboard-button" value="del">Del</button>
             <button class="keyboard-button" value="z">z</button>
             <button class="keyboard-button" value="x">x</button>
             <button class="keyboard-button" value="c">c</button>
@@ -94,10 +94,11 @@
             <button class="keyboard-button" value="b">b</button>
             <button class="keyboard-button" value="n">n</button>
             <button class="keyboard-button" value="m">m</button>
-            <button class="keyboard-button">Enter</button>
+            <button class="keyboard-button" value="enter">Enter</button>
         </div>
     </div>
 
     <script src="script.js"></script>
+    <script src="words.js"></script>
 </body>
 </html>
