generate random word

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button class="help-btn" type="submit">?</button>
     </header>
 
-    <div class="msg"></div>
+    <div class="msg">Start guessing!</div>
 
     <!-- ===== INPUT - AREA ===== -->
     
@@ -98,7 +98,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
     <script src="words.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
