--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <header>
         <!-- ===== NAV MENU ===== -->
         <nav>
-            <a onclick="startGame(); closeNav()">Start Game</a>
-            <a onclick="setLevel(); closeNav()">Level</a>
-            <a onclick="getScore(); closeNav()">Score</a>
-            <a onclick="showHelp(); closeNav()">Help</a>
+            <a onclick="startGame(); closeMenu()">Start Game</a>
+            <a onclick="setLevel(); closeMenu()">Level</a>
+            <a onclick="getScore(); closeMenu()">Score</a>
+            <a onclick="showHelp(); closeMenu()">Help</a>
         </nav>
 
         <!-- ==== MENU BUTTONS ===== -->
