--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <button class="help-btn" type="submit" onclick="showHelp()">?</button>
     </header>
 
-    <div class="msg">Start guessing!</div>
 
     <!-- ===== HELP SECTION ===== -->
 
@@ -59,6 +58,14 @@
     <!-- ===== MAIN BODY ===== -->
 
     <section class="main">
+
+        <div class="main-head">
+            <div class="scoreboard">Score: <span class="score">0</span></div>
+            <button onclick="giveUp()">Give Up</button>
+        </div>
+
+        <div class="msg">Start guessing!</div>
+
     
          <!-- ===== INPUT - AREA ===== -->
     
