--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- ===== HELP SECTION ===== -->
 
-    <section class="help">
+    <section class="pop-up help">
         <h2>How to play?</h2>
 
         <p>You have 6 tries to guess the word.</p>
@@ -58,7 +58,7 @@
 
     <!-- ===== SCORING RULES ===== -->
 
-    <section class="scoreRules">
+    <section class="pop-up scoreRules">
         <h1>How scores are calculated?</h1>
 
         <img src="word.png" alt="">
