set result section

--- a/index.html
+++ b/index.html
@@ -90,6 +90,19 @@
     </section>
 
 
+    <!-- ===== RESULT SECTION ===== -->
+
+    <section class="pop-up result">
+        <p class="resultMsg"></p>
+        <img class="resultImg" src="" alt="">
+        <p class="resultScore"></p>
+        <p class="highestScore"></p>
+
+        <button onclick="closeIt(result); resetGame(); generateRandomWord()">Play again!!</button>
+
+    </section>
+
+
     <!-- ===== MAIN BODY ===== -->
 
     <section class="main">
